<resources>
    <string name="app_name">Human eTime Admin</string>
    <string name="apiKey">AIzaSyB39xIrI54yuyaaXH9XuMctRfDKgmPcKj4</string>
    <string name="a_login_text_admin">Admin</string>
    <string name="a_login_text_language">Idioma</string>
    <string name="a_login_text_cia">Compañía</string>
    <string name="a_login_text_email">Correo electrónico</string>
    <string name="a_login_text_password">Contraseña</string>
    <string name="a_login_text_select_cia">Seleccione una compañía</string>
    <string name="a_login_toast_select_cia">Favor de seleccionar una compañía.</string>
    <string name="a_login_link_new_account">Crear cuenta</string>
    <string name="a_login_link_recover_password">Recuperar contraseña</string>
    <string name="a_login_btn_enter">Entrar</string>
    <string name="a_login_error_access_user">El usuario no cuenta con privilegios de administrador.</string>
    <string name="a_login_error_email_empty">Favor de ingresar su correo electrónico.</string>
    <string name="a_login_error_nip_empty">Favor de ingresar su contraseña.</string>
    <string name="a_login_error_email_valids">Favor de ingresar un correo electrónico válido.</string>
    <string name="a_login_hint" translatable="false">- - - - </string>
    <string name="log_in">Iniciar sesión</string>
    <string name="login_botton_enter">Acceder</string>
    <string name="login_text_recover">¿No pudiste acceder a tu cuenta?</string>
    <string name="login_email">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="data_admin_form_title">Datos del administrador</string>
    <string name="data_admin_name">Nombres</string>
    <string name="data_admin_title_amaterno">Apellido materno (Opcional)</string>
    <string name="data_admin_title_apaterno">Apellido paterno</string>
    <string name="data_admin_title_phone">Teléfono</string>
    <string name="data_admin_title_email">Correo electrónico</string>
    <string name="data_admin_title_password">Contraseña</string>
    <string name="data_admin_title_confirm_password">Confirmar contraseña</string>
    <string name="data_admin_dialog_user_password_title">Introduzca su clave de acceso</string>
    <string name="data_admin_dialog_user_password_place_holder">Contraseña o pin de accesos</string>
    <string name="data_admin_title_btn_next">Siguiente</string>
    <string name="data_admin_title_btn_save">Guardar</string>
    <string name="msg_success_admin">Su NIP se ha enviado a su correo electrónico.</string>
    <string name="data_company_title_register">Registro de cuenta</string>
    <string name="data_company_form_title">Datos de compañía</string>
    <string name="data_company_title">Nombre de compañía</string>
    <string name="data_company_title_name">Clave de compañía</string>
    <string name="data_company_title_bussines_name">Razón social</string>
    <string name="data_company_title_rfc">RFC</string>
    <string name="data_company_title_address">Dirección</string>
    <string name="data_company_title_email">Correo de facturación</string>
    <string name="data_company_title_country">País</string>
    <string name="data_company_title_phone_number">Teléfono (Opcional)</string>
    <string name="data_company_phone_code">Còdigo</string>
    <string name="data_company_interior_number">Núm. interior(Opcional)</string>
    <string name="data_company_outdoor_address">Núm. exterior</string>
    <string name="data_company_street">Calle</string>
    <string name="data_company_title_btn_next">Guardar</string>
    <string name="data_company_title_lenguage">País/Región e idioma</string>
    <string name="data_company_lenguaje_selected">Idioma</string>
    <string name="message_title_forgot_nip">Recuperar contraseña</string>
    <string name="button_reset_nip">Recuperar</string>
    <string name="current_nip">Contraseña actual</string>
    <string name="new_nip">Nueva contraseña</string>
    <string name="confirm_nip">Confirmar nueva contraseña</string>
    <string name="title_rfc">RFC</string>
    <string name="title_curp" translatable="false">CURP</string>
    <string name="side_menu_title_1">Datos de compañía</string>
    <string name="side_menu_title_2">Zonas</string>
    <string name="side_menu_title_3">Supervisores</string>
    <string name="side_menu_title_4">Empleados</string>
    <string name="side_menu_title_5">Reportes</string>
    <string name="side_menu_title_6">Estaciones</string>
    <string name="side_menu_title_7">Cambiar contraseña</string>
    <string name="side_menu_title_8">Cerrar sesión</string>
    <string name="side_menu_title_9">Comprar</string>
    <string name="side_menu_logout_title_9">¿No tú?</string>
    <string name="side_menu_title_10">Configuración</string>
    <string name="side_menu_title_11">Acerca de</string>
    <string name="side_menu_title_12">Historial de auditoría</string>
    <string name="side_menu_title_13">Autorización de fotografia</string>
    <string name="autorizar">Autorizar</string>
    <string name="rechazar">Rechazar</string>
    <string name="no_existen_registros">No existen registros</string>
    <string name="fotografia_local">Almacenamiento de fotografía en celular</string>
    <string name="title_activity_way_to_pay">WayToPay</string>
    <string name="data_admin_num_check">Número de registros</string>
    <string name="data_admin_num_check_text">""</string>
    <string name="way_to_pay_subtotal">Subtotal:</string>
    <string name="way_to_pay_title">Forma de Pago</string>
    <string name="way_to_pay_opt_1">Tarjeta de crédito/debito</string>
    <string name="way_to_pay_opt_2">PayPal</string>
    <string name="way_to_pay_iva">IVA:</string>
    <string name="way_to_pay_total">Total:</string>
    <string name="way_to_pay_facturacion">Facturar  </string>
    <string name="way_to_pay_preauthorization_message">Para su seguridad, preautorizaremos un cargo de hasta $1.00 USD en su tarjeta. No se preocupe, solo se trata de una verificación y el dinero no se debitará de su cuenta.</string>
    <string name="way_to_pay_continue_pay">Continuar la compra</string>
    <string name="way_to_pay_detail_payment">Comprar saldo</string>
    <string name="way_to_pay_credit_card">Debito/Crédito</string>
    <string name="way_to_pay_credit_name">Titular de la tarjeta</string>
    <string name="way_to_pay_credit_number">Número de tarjeta</string>
    <string name="way_to_pay_cvv">CVV</string>
    <string name="way_to_pay_date">Fecha de caducidad</string>
    <string name="way_offline_message_1">Existen compras pendientes por procesar. ¿Deseas enviar las compras pendientes?</string>
    <string name="way_offline_message_2">¿Estás seguro que no quieres enviar las compras pendientes.?</string>
    <string name="way_offline_message_3">Su compra está siendo procesada, en cuando el servicio de compra se restablezca se registrarán sus datos.</string>
    <string name="welcome">Bienvenido, %1$s</string>
    <string name="welcome_super_razon_social">VSM Servicios S.A de C.V.</string>
    <string name="welcome_super_historial">Historial de entradas y salidas</string>
    <string name="message_enroll">Por favor digite el número del empleado que desea enrolar o modificar.</string>
    <string name="message_admin_employee_number">Por favor digite el número del empleado que desea enrolar o modificar.</string>
    <string name="employee_number">Número de empleado: </string>
    <string name="welcome_super_title">Checadas diarias</string>
    <string name="welcome_super_estadisticas">Estadísticas de registro</string>
    <string name="welcome_message_barchar">Total de empleados con registro</string>
    <string name="data_admin_graphic_legent_consumed">Trabajadores registrados</string>
    <string name="data_admin_graphic_legent_remaining">Total de trabajadores</string>
    <string name="data_admin_graphic_label">Procesados</string>
    <string name="free_trail">Período de prueba</string>
    <string name="free_trail_active">Período de prueba activo</string>
    <string name="free_trail_time">Te quedan %1$d dias. Actualiza tu cuenta.</string>
    <string name="free_trail_time_one_day">Te queda %1$d dia. Actualiza tu cuenta.</string>
    <string name="free_trail_expired"><![CDATA[Te informamos que <b>tu cuenta de Human Free Trail expiró</b>. Si deseas continuar con los beneficios de la aplicación, te recomendamos realizar el pago ahora.]]></string>
    <string name="free_trail_zonas">Solo puedes configurar 1 zona como máximo. Si deseas agregar más, actualiza tu versión Trial a Enterprise.</string>
    <string name="free_trail_estaciones">Solo puedes configurar 5 estaciones como máximo. Si deseas agregar más, actualiza tu versión Trial a Enterprise.</string>
    <string name="free_trail_supervisor">Solo puedes configurar 1 supervisor como máximo. Si deseas agregar más, actualiza tu versión Trial a Enterprise.</string>
    <string name="free_trail_empleados">Solo puedes configurar 10 empleados como máximo. Si deseas agregar más, actualiza tu versión Trial a Enterprise.</string>
    <string name="expired_hi">¡Hola %1$s!</string>
    <string name="expired_today_date"><![CDATA[Te recordamos que <b>hoy %1$s</b> es tu fecha limite de pago</b>]]></string>
    <string name="expired_istoday"><![CDATA[Te recordamos que la fecha de tu promixa factura <b>%1$s vence el %2$s</b>]]></string>
    <string name="expired_date_one_to_seven"><![CDATA[Te informamos que <b>tu cuenta de Human eTime Enterprise expiró</b>. Si deseas continuar con los beneficios de la aplicación, te recomendamos realizar el pago ahora.]]></string>
    <string name="expired_pay_now">Proceder a mi pago ahora</string>
    <string name="expired_pay_now_today">Pagar ahora</string>
    <string name="expired_pay_now_two">Realizar mi pago</string>
    <string name="expired_end">Te informamos que tu cuenta de Human eTime Entreprise expiró. Si deseas continuar con los beneficios de la aplicación, te recomendamos realizar el pago ahora.</string>
    <string name="expired_contact"><![CDATA[Si tienes alguna duda de como realizar el pago, escribenos a <b>contacto@venturessoft.com</b>]]></string>
    <string name="cardview_botton">Suscribirme a Enterprise</string>
    <string name="notification_one">Te informamos que en 7 días expira tu versión de prueba. Si lo deseas, puedes activar tu Suscripción Enterprise ahora \uF04A (happy face)</string>
    <string name="number_employee_num_empl">Número de colaboradores</string>
    <string name="number_employee_asig_empl">Indica el número de colaboradores que deseas asignar para este mes.</string>
    <string name="number_employee_num_col_registrar">Número de colaboradores a registrar</string>
    <string name="number_employee_pagar">Pagar</string>
    <string name="registersupervisor_holder_name">Nombres</string>
    <string name="registersupervisor_holder_appaterno">Apellido paterno</string>
    <string name="registersupervisor_holder_apmaterno">Apellido materno (Opcional)</string>
    <string name="registersupervisor_holder_email">Correo electrónico</string>
    <string name="registersupervisor_holder_estatus">Estatus</string>
    <string name="registersupervisor_btnsave">Guardar</string>
    <string name="zones_description">Nombre de la zona</string>
    <string name="zones_add">Agregar zonas</string>
    <string name="title__select_zones">Zonas</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Agregar</string>
    <string name="et_licence_terms_title">"Política de Privacidad"</string>
    <string name="et_licence_terms_text">"Al usar Human eTime Admin, aceptas nuestra política de privacidad"</string>
    <string name="et_licence_terms_text_link">"&lt;u>Política de Privacidad.&lt;/u></string>
    <string name="et_text_confirm">"Confirmar"</string>
    <string name="station_txt_enabled_station">Restringir alta y edición de estaciones</string>
    <string name="numero_de_empleados">Numero de empleados</string>
</resources>