<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    tools:context=".views.ui.fragments.welcome.NumberEmployeeFragment">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/number_employee_num_empl"
        android:textColor="#10568B"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:letterSpacing="0.03"
        android:lineSpacingExtra="2sp"
        android:text="@string/number_employee_asig_empl"
        android:textColor="#405B75"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number_employee_num_col_registrar"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <EditText
        android:id="@+id/employe_numbers"
        style="@style/Base.Widget.MaterialComponents.TextInputEditTextt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:hint="@string/numero_de_empleados"
        android:inputType="number"
        android:maxLength="10"
        android:textColorHint="@color/mForm"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="El costo por colaborador es de $100.00 MXN"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/employe_numbers"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/mTurqoise"
        android:text="@string/number_employee_pagar"
        android:textAllCaps="false"
        android:textColor="@color/miWhite"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/text3" />

</androidx.constraintlayout.widget.ConstraintLayout>