<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog">

    <TextView
        android:id="@+id/dialogTitle"
        style="@style/DialogTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_licence_terms_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTerms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="10dp"
        android:layout_marginEnd="16dp"
        android:gravity="start"
        android:maxLines="3"
        android:singleLine="false"
        android:text="@string/et_licence_terms_text"
        android:textColor="@color/mBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkTerms"
        app:layout_constraintTop_toTopOf="@+id/checkTerms" />

    <TextView
        android:id="@+id/txtPolicy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:maxLines="1"
        android:singleLine="false"
        android:text="@string/et_licence_terms_text_link"
        android:textColor="@color/mBlack"
        app:layout_constraintStart_toStartOf="@+id/txtTerms"
        app:layout_constraintTop_toBottomOf="@+id/txtTerms" />
    <CheckBox
        android:id="@+id/checkTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:buttonTint="@color/mBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin16"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPolicy"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtonEtime3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnAccept"
            style="@style/ButtonAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/et_text_confirm" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
