<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ui.fragments.Supervisor.RegisterSupervisorFragment">

    <Button
        android:id="@+id/btnRegisterSuper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_margin="@dimen/margin16">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textNameEmployee"
                style="@style/InputLayoutAdmin"
                android:layout_width="match_parent"
                android:hint="@string/registersupervisor_holder_name"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/supername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="55" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayoutAdmin"
                android:layout_width="match_parent"
                android:hint="@string/registersupervisor_holder_appaterno"
                android:layout_marginTop="@dimen/margin16"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/superApPaterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="55" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayoutAdmin"
                android:layout_width="match_parent"
                android:hint="@string/registersupervisor_holder_apmaterno"
                android:layout_marginTop="@dimen/margin16"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/superApMaterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="55" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayoutAdmin"
                android:layout_width="match_parent"
                android:hint="@string/registersupervisor_holder_email"
                android:layout_marginTop="@dimen/margin16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/superEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="55" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayoutAdmin"
                android:layout_width="match_parent"
                android:hint="@string/title__select_zones"
                android:layout_marginTop="@dimen/margin16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/zonasSeleccinadas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:foreground="?attr/selectableItemBackground"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/statusEstacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/station_txt_enabled_station"
                android:visibility="visible" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/superWich"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                android:checked="true"
                android:text="@string/registersupervisor_holder_estatus"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnSaveSupervisor"
                style="@style/ButtonAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/registersupervisor_btnsave" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/loadingAnimationAltaSuper"
            layout="@layout/view_loading_new"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
